err/dolly.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Dolly-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/dolly'...
Compiling './lib/python3.5/site-packages/dolly/__main__.py'...
***   File "./lib/python3.5/site-packages/dolly/__main__.py", line 16
    print banner
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dolly/config.py'...
***   File "./lib/python3.5/site-packages/dolly/config.py", line 73
    print yaml.dump(self.data)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dolly/dolly.py'...
***   File "./lib/python3.5/site-packages/dolly/dolly.py", line 85
    print "Dolly version: " + pkg_resources.require("Dolly")[0].version
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dolly/gitrepository.py'...
***   File "./lib/python3.5/site-packages/dolly/gitrepository.py", line 15
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dolly/terminal.py'...
***   File "./lib/python3.5/site-packages/dolly/terminal.py", line 26
    print '\033[92m' + message + '\033[0m'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dolly/testadd.py'...
***   File "./lib/python3.5/site-packages/dolly/testadd.py", line 5
    print p.data
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dolly/util.py'...
***   File "./lib/python3.5/site-packages/dolly/util.py", line 24
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dolly/v_list.py'...
***   File "./lib/python3.5/site-packages/dolly/v_list.py", line 14
    print '({3}/{4}) [{0}] {1} => {2}'.format(repo['name'], repo['remote'], repo['local'], project.Project.currentProj, project.Project.projectCount)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dolly/v_list_dirs.py'...
***   File "./lib/python3.5/site-packages/dolly/v_list_dirs.py", line 14
    print repo['local']
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
